configured java spring boot project & added consumption of api

--- a/web-app/src/main/resources/templates/mycv.html
+++ b/web-app/src/main/resources/templates/mycv.html
@@ -8,7 +8,9 @@
     </head>
     <body>
         <div style="display: flex; align-items: center; justify-content: center; align-content: center; flex-direction: column;">
-            <h1>home</h1>            
+            <h1>test</h1>            
+            <p>${mycv.aboutMe}</p>
+            <p th:text="${mycv.aboutMe}"></p>
         </div>        
     </body>
 </html>
