fixed hang mvn clean package command

--- a/web-app/src/main/resources/templates/home.html
+++ b/web-app/src/main/resources/templates/home.html
@@ -9,7 +9,7 @@
     <body>
         <div style="display: flex; align-items: center; justify-content: center; align-content: center; flex-direction: column;">
             <h1>home</h1>            
-            <h1>this change was automatically deploy with aws codedeploy</h1>
+            <h1>pls make it work this time</h1>
         </div>        
     </body>
 </html>
