adding overwrite file behavior to appspec

--- a/web-app/src/main/resources/templates/home.html
+++ b/web-app/src/main/resources/templates/home.html
@@ -9,7 +9,7 @@
     <body>
         <div style="display: flex; align-items: center; justify-content: center; align-content: center; flex-direction: column;">
             <h1>home</h1>            
-            <h1>now I understandd codedeploy hooks</h1>
+            <h1>another validation</h1>
         </div>        
     </body>
 </html>
